quick fix to add port support for webdav J2EE RESTful app
Former-commit-id: 61310b089b2448cb66c67f58de6b311e76e85bab